# forgetting-aware-vlm

./: .gitignore  README.md  pyproject.toml
configs/: debug.yaml  default.yaml
scripts/: evaluate.py  run_openrlhf.sh  train.py
src/fa_evolve/: __init__.py  challenger.py  curriculum.py  evaluation.py  forgetting_detector.py  orchestrator.py  reward.py
src/fa_evolve/data/: formatting.py  loader.py  probe_cache.py
src/fa_evolve/utils/: config.py  logging_utils.py
tests/: test_curriculum.py  test_evaluation.py  test_forgetting_detector.py  test_reward.py
